--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <script src="https://kit.fontawesome.com/37153e5c0b.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <div class="container"><app-root></app-root></div>
+    <app-root></app-root>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
       integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
